First attempt at fixing the CI
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/locate-loop-and-live-variables@47756 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c